fixed check cropping with css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -191,8 +191,14 @@ input[type="button"]:hover, .radioButton:hover, input[type="button"]:focus, .rad
 
 /* Cash Money Stuff */
 #checkShowWrapper {
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
+}
+#checkShowWrapper svg {
+	max-width: 95%;
+	max-height: 95%;
+	margin: 0 auto;
+	object-fit: contain;
 }
 
 /* Overriding playlist graphics */
